<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_phone_type"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerPhoneType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/phone_types"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_brand"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radioSamsung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand_samsung" />

        <RadioButton
            android:id="@+id/radioApple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand_apple" />

        <RadioButton
            android:id="@+id/radioXiaomi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand_xiaomi" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"/>
</LinearLayout>